# AUGUSTINUS

./: .dockerignore  Cargo.toml  augustinus_ascii.txt  docker-compose.yml
crates/augustinus-ai/: Cargo.toml
crates/augustinus-ai/src/: lib.rs
crates/augustinus-app/: Cargo.toml
crates/augustinus-app/src/: action.rs  agents_terminal.rs  focus.rs  input.rs  lib.rs  motivation.rs  motivation_anim.rs  panes.rs  particles.rs  state.rs  stats.rs
crates/augustinus-app/tests/: agents_terminal_lock.rs  general_input_routing.rs  git_numstat_parse.rs  idle_detection.rs  motivation_anim.rs  motivation_events.rs  motivation_rotation.rs  particles.rs  reducer_focus.rs  reducer_fullscreen.rs
crates/augustinus-i18n/: Cargo.toml
crates/augustinus-i18n/src/: lib.rs  strings.rs
crates/augustinus-pty/: Cargo.toml
crates/augustinus-pty/src/: lib.rs  session.rs
crates/augustinus-pty/tests/: spawn_command.rs
crates/augustinus-store/: Cargo.toml
crates/augustinus-store/migrations/: 001_init.sql
crates/augustinus-store/src/: config.rs  db.rs
crates/augustinus-store/tests/: config_roundtrip.rs  db_smoke.rs
crates/augustinus-tui/: Cargo.toml
crates/augustinus-tui/src/: command_overlay.rs  first_boot.rs  layout.rs  lib.rs  splash.rs  theme.rs
crates/augustinus-tui/src/panes/: agents.rs  general.rs  mod.rs  motivation.rs  stats.rs
crates/augustinus-tui/tests/: big_text.rs  command_overlay.rs  stats_pane.rs
docker/: Dockerfile  entrypoint.sh
docs/: DEV_DOCKER.md
docs/plans/: 2026-02-17-augustinus-mvp.md  2026-02-17-general-pane-input-routing.md  notes-smoke.md
(+2 files in other folders)
