[package]
name = "augustinus-store"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
augustinus-i18n = { path = "../augustinus-i18n" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
